--- a/pres.Rmd
+++ b/pres.Rmd
@@ -62,6 +62,10 @@ suppressPackageStartupMessages({
     library(doParallel)
     library(calibrate)
     library(vip)
+    library(png)
+    library(grid)
+    library(magick)
+
 })
 
 set.seed(123)
@@ -336,11 +340,28 @@ class: segue-yellow
 .pull-right[
 ### Model Evaluation    
 
+- Testing Accuracy:  0.7601 
+- Recall:  0.7778 
+- Precision:  0.0348 
+- F1 Score:  0.0667
+
 ]
 
 ---
 
-## Random Forest
+## SVM Roc
+
+
+```{r, message=FALSE, echo=FALSE}
+# Read and display the image
+img <- image_read("assets/roc_svm.png")
+plot(img)
+
+```
+
+---
+
+## Random Forest (Ensemble I)
 --- 
 
 .pull-left[
@@ -357,11 +378,39 @@ class: segue-yellow
 .pull-right[
 ### Model Evaluation
 
+- Accuracy: 0.7368421 
+- Precision: 0.03603604 
+- Recall: 0.8888889 
+- F1 Score: 0.06926407
+
 ]
 
 ---
 
-## XGBoost
+## Bagged Decision Trees (Ensemble II)
+--- 
+
+.pull-left[
+### Model Details
+- Bagged CART
+- 5 Folds Cross Validation
+- Training Accuracy: 0.7492437
+
+]
+
+.pull-right[
+### Model Evaluation
+
+- Accuracy: 0.6768666 
+- Precision: 0.0260223 
+- Recall: 0.7777778 
+- F1 Score: 0.05035971 
+
+]
+
+---
+
+## XGBoost (Ensemble III)
 --- 
 
 .pull-left[
@@ -377,6 +426,9 @@ class: segue-yellow
 .pull-right[
 ### Model Evaluation
 
+
+
+
 ]
 
 ---
@@ -384,28 +436,12 @@ class: segue-yellow
 ## Neural Networks
 --- 
 
-.pull-left[
-
-### Model Details
-
-- TODO: Fill
-
-]
-
-.pull-right[
-### Model Evaluation
-
-]
-
----
-
-## Bagged Cart
---- 
+- Trained a model, but...
 
 ---
 class: segue-yellow
 
-## Discussion (TOPIC)
+## Discussion
 
 
 ---
@@ -414,9 +450,10 @@ class: segue-yellow
 --- 
 
 - **Final Choice of Model: XGB**
-  - Slow Learner/Class Imbalance
-- Predicts Approximately 2000
-  - This is much higher than 400 from the previous study.
+  - Ensemble Method/Slow Learner/Class Imbalance
+  - Most robust model
+- Predicts Approximately 2000 Targts
+  - This is much higher than 400 from the previous study. However, accuracy is not low!?
   - May be due to fewer data points or current downsampling.
 
 
@@ -426,8 +463,7 @@ class: segue-yellow
 --- 
 
 - Class Imbalance Solutions
-  1. Ensemble Methods
-  2. Futher EDA to decide other means of removing data, or possibly leaving data imbalanced.
+  - Futher EDA to decide other means of removing data, or possibly leaving data imbalanced.
 
 - Further Evaluation (Precision, Recall, F1-Score and AUC-ROC)
 
